Kubernetes/base/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gin-service
  # namespace: lab
spec:
  selector:
    app: gin
  type: LoadBalancer
  ports:
  - name: gin
    protocol: TCP
    port: 4000
    targetPort: 4000
